hotcloud-test/hotcloud-test-application/src/test/resources/io/hotcloud/application/api/template/redisinsight.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: pv-redisinsight-5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  accessModes:
    - ReadWriteOnce
  capacity:
    storage: 10Gi
  claimRef:
    kind: PersistentVolumeClaim
    name: pvc-redisinsight-5b2378dc5d2f4eedb55ed9217255c8cd
    namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  hostPath:
    path: /tmp/app/5b2378dc5d2f4eedb55ed9217255c8cd/redisinsight
  volumeMode: Filesystem
  persistentVolumeReclaimPolicy: Retain
  storageClassName: storage_class_application
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-redisinsight-5b2378dc5d2f4eedb55ed9217255c8cd
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
  volumeName: pv-redisinsight-5b2378dc5d2f4eedb55ed9217255c8cd
  storageClassName: storage_class_application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  labels:
    app: redisinsight
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: pvc-redisinsight-5b2378dc5d2f4eedb55ed9217255c8cd
      initContainers:
        - name: init
          image: busybox
          command:
            - /bin/sh
            - '-c'
            - 'chown'
            - '-R'
            - '1001'
            - '/db'
          resources: {}
          volumeMounts:
            - name: db
              mountPath: /db
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      containers:
        - name:  redisinsight
          image: redislabs/redisinsight:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
          - name: db
            mountPath: /db
          ports:
          - containerPort: 8001
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: redisinsight
